# ROS-PAT-Autonomous-Firefighting-Simulation

./: README.md
firebot_system/: CMakeLists.txt  full_explored_map.txt  package.xml  pat_raw_output.txt  robot_movements.txt  scout_path.txt  world.csp
firebot_system/launch/: house_sim.launch
firebot_system/src/: firebot_executor_node.cpp  map_node.cpp  scout_node.cpp  sonars.cc
firebot_system/worlds/: home.world
